--- a/templates/general.j2
+++ b/templates/general.j2
@@ -101,7 +101,7 @@ innodb_rollback_on_timeout      	= ON
 ###innodb_force_primary_key        	= ON
 innodb_print_all_deadlocks      	= ON
 innodb_defragment               	= ON
-nnodb_flush_method                 = O_DIRECT
+innodb_flush_method                 = O_DIRECT
 innodb_max_dirty_pages_pct          = 50
 innodb_stats_sample_pages           = 32
 
