--- a/templates/general.j2
+++ b/templates/general.j2
@@ -33,7 +33,7 @@ userstat                        	= ON
 sql_mode                        	= "NO_ENGINE_SUBSTITUTION,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER"
 session_track_system_variables  	= "autocommit,character_set_client,character_set_connection,character_set_results,last_gtid,time_zone"
 #default_time_zone              	= "US/Central"
-performance_schema
+performance_schema=OFF
 event_scheduler
 skip_name_resolve
 
